--- a/index.html
+++ b/index.html
@@ -3,27 +3,44 @@
 
 <head>
   <title>Cake Order Form</title>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS v5.2.1 -->
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
 </head>
 
-<body>
+<body class="bg-info" >
   <header>
-    oi
   </header>
-  <main>
+  <main class="row container">
+    <h1>Cake Order Form</h1>
+    
+    <p>Order your freshly baked cake made using only the finest quality natural ingredients</p>
+    <p>Please choose your favorite cake from among the following</p>
+    <h1>Order information</h1>
+    <p>Name</p>
+
+    <input placeholder="First" class="col-12 col-md-6"/>
+    <input placeholder="Last" class="col-12 col-md-6"/>
+
+    <div class="col-12 col-md-6">
+      <p>Delivery date</p>
+      <input placeholder="MM/DD/YY" >
+    </div>
+    <div class="col-12 col-md-6">
+      <p>Preferred delivery time</p>
+      <input placeholder="HH:MM AM"> 
+    </div>
+    
+    <div class="col-12 col-md-6">
+<p>Phone</p>
+<p>email</p>
 
   </main>
   <footer>
-    <!-- place footer here -->
   </footer>
-  <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
   </script>
